# bevy-project-test

./: CLAUDE.md  Cargo.toml
content/: cities.ron  combat.ron  map.ron  units.ron
crates/bevy_adapter/: Cargo.toml
crates/bevy_adapter/src/: binding.rs  input.rs  lib.rs  lifecycle.rs  mapper.rs  tick.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: binding.rs  interpolation.rs  lib.rs
crates/render_view/: Cargo.toml
crates/render_view/src/: camera.rs  debug_shape.rs  lib.rs  selection.rs  unit_info_bar.rs
crates/render_view/src/ui/: CLAUDE.md  gameover.rs  hud.rs  menu.rs  mod.rs  observer.rs  pause.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: command.rs  events.rs  facing.rs  lib.rs  types.rs
docs/superpowers/plans/: 2026-06-05-city-conquest-implementation.md  2026-06-13-shield-facing-visual-feedback.md  2026-06-13-unit-behavior-redesign.md
docs/superpowers/specs/: 2026-06-05-rts-game-design.md  2026-06-13-shield-facing-visual-feedback.md  2026-06-13-unit-behavior-redesign.md
openspec/changes/archer-arrow-system-redesign/: design.md
openspec/changes/archer-target-cities/: tasks.md
openspec/changes/architecture-refactor-four-layer-workspace/: design.md  proposal.md  tasks.md
openspec/changes/arrow-city-collision/: tasks.md
openspec/changes/hud-redesign/: tasks.md
src/: main.rs
src/ai/: mod.rs
src/camera/: mod.rs
src/city/: mod.rs
src/combat/: mod.rs
src/core/: mod.rs
src/game/: mod.rs
src/input/: mod.rs
src/map/: mod.rs
src/soldier/: mod.rs
src/ui/: gameover.rs  hud.rs  menu.rs  mod.rs  pause.rs
(+175 files in other folders)
