[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "city-conquest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"
bevy_prototype_lyon = "0.16"
rand = "0.8"
simulation = { path = "crates/simulation" }
bevy_adapter = { path = "crates/bevy_adapter" }
presentation = { path = "crates/presentation" }
render_view = { path = "crates/render_view" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
