[package]
name = "render_view"
version = "0.1.0"
edition = "2021"

[dependencies]
simulation = { path = "../simulation" }
bevy_adapter = { path = "../bevy_adapter" }
presentation = { path = "../presentation" }
bevy = { version = "0.18", features = ["experimental_bevy_ui_widgets"] }
bevy_prototype_lyon = "0.16"
